--- a/index.css
+++ b/index.css
@@ -1,26 +1,41 @@
-.selector {
-    color: <цвет>; /* Цвет текста */
-    background: <цвет>; /* Цвет подложки */
-    display: none; /* Элемент (например, строка таблицы) не будет отображаться */
-    display: table-row; /* Обратно отобразить строку таблицы */
+th 
+{
+    color: white;
+    background-color: #9c9c9c;
 }
-table,
-tr,
-th,
-td{
-    border: 1px solid black;
-}
-tr:nth-child(2n+1){
-    background: grey;
+table 
+{
+    border-spacing: 0;
+    overflow: hidden;
 }
 .first
 {
-    background-color: grey;
+    background-color: #b5b5b5;
 }
-
-tr:hover
+tr > td 
+{
+    padding: 10px;
+    font-size: 15px;
+    position: relative;
+}
+table > tbody > tr:hover 
 {
     padding: 20px;
-    background-color: red !important;
+    background-color: #ff4500 !important;
     color: white;
+}
+td:hover:after
+{
+    content: "";
+    position: absolute;
+    background-color: #ff4500 !important;
+    left: 0;
+    top: -5000px;
+    height: 10000px;
+    width: 100%;
+    z-index: -1;
+}
+tr:nth-child(even)
+{
+    background-color: #b5b5b5
 }
