--- a/index.css
+++ b/index.css
@@ -15,35 +15,41 @@ table
     background-color: #b5b5b5;
 }
 
-tr > td 
+td 
 {
     padding: 10px;
     font-size: 15px;
     position: relative;
 }
 
-table > tbody > tr:hover 
+tr:nth-child(even) td::after
 {
-    padding: 20px;
-    background-color: #ff4500 !important;
-    color: white;
+    content: '';
+    background: #9c9c9c ;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -3;
 }
 
-td:hover:after
+tbody td:hover::after
 {
-    content: "";
+    content: '';
     position: absolute;
-    background-color: #ff4500 !important;
-    left: 0;
-    top: -5000px;
+    text-align: center;
+    background: #ff4500 ;
     height: 10000px;
+    top: -5000px;
     width: 100%;
+    left: 0;
     z-index: -1;
 }
 
-tr:nth-child(even)
+tbody tr:hover
 {
-    background-color: #b5b5b5
+    background: #ff4500 ;
 }
 
 button
